[package]
edition = "2024"
name = "codex-http-server"
version = { workspace = true }

[lib]
name = "codex_http_server"
path = "src/lib.rs"

[[bin]]
name = "sse-http-server"
path = "src/bin/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-arg0 = { workspace = true }
codex-common = { workspace = true, features = ["cli"] }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
mcp-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
ts-rs = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1.11", features = ["v4"] }
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
